<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NextToYouAndroid</string>
    <string name="google_maps_api_key">AIzaSyB_4GQ9NplQYvxMbzMATq2m4cxmhC_0V50</string>
    <string name="action_settings">Settings</string>

    <string-array name="screens_array">
        <item>screen1</item>
        <item>screen2</item>
        <item>map fragment</item>
    </string-array>

    <string name="fill_in_pass">Please fill in your password</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="splash_travel_in_company">Travel accompanied</string>
    <string name="splash_version_info">Version 1.0\nPowered by Globant</string>
    <string name="login_image_bottom">Login image bottom</string>
    <string name="logo_login">Logo login</string>
    <string name="login_title">Login</string>
    <string name="login_e_mail">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_forgotten_password">Forgotten Password</string>
    <string name="login">Login</string>
    <string name="login_progress">Logging in &#8230;</string>
    <string name="login_empty_email">Please fill in your email</string>
    <string name="login_empty_pass">Please fill in your password</string>
    <string name="login_close_forgotten_password_screen">Close forgotten password screen</string>
    <string name="login_retrieve_password">Retrieve password</string>
    <string name="login_forgotten_password_description">Enter your email\nand we will send you instructions\nto recover your password.</string>
    <string name="login_send">Send</string>
    <string name="login_reset_ok">Password reset successful</string>
    <string name="login_reset_failed">Password reset failed</string>
    <string name="login_failed">Login failed</string>
    
    <string name="travels_done">%d Travels done</string>

    <!-- Sliding menu options -->
    <string-array name="sliding_menu_opitions">
        <item>Home</item>
        <item>Notification</item>
        <item>Change community</item>
        <item>My Profile</item>
        <item>Logout</item>
    </string-array>

    <string name="offer_ride_notification_text">
         <![CDATA[
        	<font color="#693690">You asked to share your<br/> travel with:</font> 
        	<font color="#46d055"><b>%d persons</b></font><br/>
        	<font color="#693690">which are going to your<br/>destination and which are<br/> near you now</font>
        ]]>
    </string>

    <string name="offer_ride_notification_text_single">
         <![CDATA[
        	<font color="#693690">You asked to share your<br/> travel with:</font> 
        	<font color="#46d055"><b>%d person</b></font><br/>
        	<font color="#693690">which is going to your<br/>destination and which is<br/> near you now</font>
        ]]>
    </string>

    <string name="invalid_timespan_selected">Invalid timespan has been selected</string>
    
    <string name="main_content_community_globant">Community</string>
    <string name="close_notification">Close notification</string>
    <string name="notification">Notification</string>
    <string name="go_to">I go to&#8230;</string>
    <string name="messages">Messages</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="from">from</string>
    <string name="offer_travel">Offer travel</string>
    <string name="ask_for_travel">Ask for travel</string>
    <string name="arrow_up">Arrow up</string>
    <string name="colon">:</string>
    
    <!-- Offer a ride -->
    <string name="offer_ride_description">You offered to share travel:</string>
    <string name="offer_ride_persons">%d persons</string>
    <string name="offer_ride_person">%d person</string>
    <string name="offer_ride_go_to_your_direction">which are going to your direction</string>
    <string name="offer_ride_go_to_your_direction_single">which is going to your direction</string>
    <string name="offer_ride_travels_completed">
        <![CDATA[
        	<big>%d</big> travels shared 
        ]]>
    </string>
    <string name="offer_ride_congrats">Congratulations\nyou have won an award\nfor helping improve</string>
    <string name="facebook_app_not_available">Facebook application not found</string>
    <string name="ask_ride_pending_travels">Pending travels</string>
    <string name="ask_ride_offered_travels">Offered travels</string>
    <string name="ask_ride_ignore">Ignore</string>
    <string name="offer_ride">Offer travel</string>
    <string name="old_password">Old password</string>
    <string name="reject">Reject</string>
    <string name="approve_travel">Approve travel</string>
    <string name="new_password">New password</string>
    <string name="verify">Verify</string>
    <string name="change_password">Change password</string>
    <string name="my_profile">My Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="your_home_address">Your home address</string>
    <string name="sample_address">Eg: Santa Fe 3080, Capital Federal Buenos Aires, Argentina</string>
    <string name="show_exact_address">Show exact address</string>
    <string name="mendatory_fields">&#42; Mandatory fields</string>
    <string name="comments">Comments</string>
    <string name="save_changes">Save changes</string>
    <string name="use_the_last_photo_you_took">Use the last photo you took</string>
    <string name="select_from_library">Select from library</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Take photo</string>
    <string name="change_community">Change community</string>
    
    <!-- My profile errors -->
    <string name="my_profile_fill_email">Please fill in your email</string>
    <string name="my_profile_fill_nickname">Please fill in your nickname</string>
    <string name="my_profile_fill_address">Please fill in your home address</string>
    
    <!-- home destination -->
    <string name="home_destination">Home</string>
</resources>