<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_screen_header_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/purple"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/close_forgotten_pass_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@color/transparent"
            android:contentDescription="@string/login_close_forgotten_password_screen"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/title_forgotten_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/login_retrieve_password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title" />
    </LinearLayout>

    <!-- Forgotten pass desription screen -->

    <TextView
        android:id="@+id/forgotten_pass_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/login_forgotten_password_description"
        android:textColor="@color/purple"
        android:textSize="@dimen/text_size_text" />

    <!-- Email field -->

    <EditText
        android:id="@+id/enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotten_pass_descr"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/login_e_mail"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/purple"
        android:textColorHint="@color/light_purple_hint"
        android:textSize="@dimen/text_size_login_fields" />

    <!-- Send forgotten password button -->

    <Button
        android:id="@+id/request_forgotten_pass_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_btn_selector"
        android:layout_below="@id/enter_email"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/login_send"
        android:textColor="@color/white"
        android:textIsSelectable="false"
        android:textSize="@dimen/text_size_login_fields" />

</RelativeLayout>