<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#000000" />

    <TextView
        android:id="@+id/use_last_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/grapefruit"
        android:clickable="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/use_the_last_photo_you_took"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grapefruit_focus" />

    <!-- row 2 -->

    <TextView
        android:id="@+id/take_new_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/grapefruit"
        android:clickable="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/take_photo"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grapefruit_focus" />

    <!-- row 3 -->

    <TextView
        android:id="@+id/select_from_library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/grapefruit"
        android:clickable="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/select_from_library"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grapefruit_focus" />

    <TextView
        android:id="@+id/cancel_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/purple"
        android:clickable="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#000000" />

</RelativeLayout>