<?xml version="1.0" encoding="utf-8"?>
<com.globant.next2you.view.LockableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/rootview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/login_background" >

        <!-- Header -->

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_screen_header_height"
            android:layout_alignParentTop="true"
            android:background="@color/purple" >

            <ImageView
                android:id="@+id/go_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:clickable="true"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/my_profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/my_profile"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_title" />
        </RelativeLayout>

        <!-- avatar widget -->

        <RelativeLayout
            android:id="@+id/avatar_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:background="@color/grapefruit"
            android:clickable="true"
            android:padding="20dp" >

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop" />

            <com.globant.next2you.view.TransparentListOverlay
                android:id="@+id/avatar_overlay"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerInParent="true"
                android:background="@color/transparent" >
            </com.globant.next2you.view.TransparentListOverlay>

            <TextView
                android:id="@+id/change_photo_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/avatar"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/change_photo"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_info" />
        </RelativeLayout>

        <!-- form fields -->

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/avatar_holder"
            android:layout_margin="20dp"
            android:background="@drawable/edit_text_background"
            android:drawableLeft="@drawable/required_star"
            android:hint="@string/nickname"
            android:maxLines="1"
            android:textColor="@color/purple"
            android:textColorHint="@color/light_purple_hint" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nickname"
            android:layout_margin="20dp"
            android:background="@drawable/edit_text_background"
            android:drawableLeft="@drawable/required_star"
            android:hint="@string/email"
            android:maxLines="1"
            android:textColor="@color/purple"
            android:textColorHint="@color/light_purple_hint" />

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_margin="20dp"
            android:background="@drawable/edit_text_background"
            android:drawableLeft="@drawable/required_star"
            android:drawableRight="@drawable/down_arrow"
            android:editable="false"
            android:hint="@string/location"
            android:maxLines="1"
            android:textColor="@color/purple"
            android:textColorHint="@color/light_purple_hint" />

        <!-- locations -->

        <ListView
            android:id="@+id/dest_list"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/email"
            android:background="@color/shadow"
            android:visibility="invisible" >
        </ListView>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:drawableLeft="@drawable/required_star"
            android:hint="@string/your_home_address"
            android:maxLines="1"
            android:textColor="@color/purple"
            android:textColorHint="@color/light_purple_hint" />

        <TextView
            android:id="@+id/example_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address"
            android:layout_marginLeft="30dp"
            android:text="@string/sample_address"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_hint" />

        <!-- Exact address -->

        <LinearLayout
            android:id="@+id/exact_addr_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/example_address"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/loc_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:scaleType="center"
                android:src="@drawable/show_location_off" />

            <TextView
                android:id="@+id/show_exact_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/show_exact_address"
                android:textColor="@color/purple"
                android:textSize="@dimen/text_size_info" />
        </LinearLayout>

        <EditText
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/exact_addr_holder"
            android:layout_margin="20dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/comments"
            android:textColor="@color/purple"
            android:textColorHint="@color/light_purple_hint" />

        <TextView
            android:id="@+id/mendatory_fields_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/comments"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/mendatory_fields"
            android:textColor="@color/grapefruit"
            android:textSize="@dimen/text_size_info" />

        <Button
            android:id="@+id/save_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mendatory_fields_holder"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn_selector"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/save_changes"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:textSize="@dimen/text_size_login_fields" />

        <View
            android:id="@+id/scroll_assistant"
            android:visibility="gone"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:layout_below="@id/save_changes"
            android:background="#00000000" />

        <!-- my photo -->
        <!--
        <include
            android:id="@+id/add_photo_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/header"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            layout="@layout/select_photo_dialog" />
        -->

        <LinearLayout
            android:id="@+id/add_photo_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:visibility="gone"
            android:weightSum="6" >

            <View
                android:id="@+id/close_add_photo_holder_top"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/shadow" />

            <TextView
                android:id="@+id/use_last_photo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/grapefruit"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/use_the_last_photo_you_took"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grapefruit_focus" />

            <!-- row 2 -->

            <TextView
                android:id="@+id/take_new_photo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/grapefruit"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/take_photo"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grapefruit_focus" />

            <!-- row 3 -->

            <TextView
                android:id="@+id/select_from_library"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/grapefruit"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/select_from_library"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grapefruit_focus" />

            <TextView
                android:id="@+id/cancel_photo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/purple"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="@color/white" />

            <View
                android:id="@+id/close_add_photo_holder_bottom"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/shadow" />
        </LinearLayout>
    </RelativeLayout>

</com.globant.next2you.view.LockableScrollView>